# Door-Locker-Security-System

./: .gitignore  CMakeLists.txt  Project_Workbench.eww  README.md  projecttrial.eww
Common/HAL/: comm_interface.c  comm_interface.h  readme.md
Common/MCAL/: uart.c  uart.h
Control_ECU/: Control_ECU.ewp  ECU_COMM.c
Control_ECU/Drivers/Buzzer/: READ.md  buzzer.c  buzzer.h
Control_ECU/Drivers/Eeprom/: README.md  eeprom.c  eeprom.h  eeprom_hw.h  eeprom_hw_tm4c.c  main.c  startup_ewarm.c
Control_ECU/Drivers/Motor/: README.md  motor.c  motor.h
Control_ECU/Drivers/startup_ewarm/: startup_ewarm.c
Control_ECU/Helpers/: password_init.c  password_init.h  software_reset.c  software_reset.h  timer.c  timer.h
Control_ECU/Tests/Eeprom/: eeprom_unit_test.c  eeprom_unit_test.h  main.c  mock_eeprom_hw.c
Control_ECU/src/comm/: control_comm.c
Control_ECU/src/door/: door_driver.c
Control_ECU/src/eeprom/: eeprom_driver.h
Drivers_Test_Project/: Drivers_Test.ewp  Drivers_Test.eww
Drivers_Test_Project/COMM_Tests/: main.c  test.py  uart_test_results.csv
Drivers_Test_Project/Universal_Test/: Universal_Test.py
HMI_ECU/: HMI_ECU.ewp  Keybad_set.c  Keybad_set.h  dio.c  dio.h  hmi_comm.c  keypad.c  keypad.h  lcd.c  lcd_set.c  lcd_set.h  main(final).c  main(test).c  main.c
HMI_ECU/App/: hmi.c  hmi.h
HMI_ECU/HAL/keypad/: keypad.c  keypad.h
HMI_ECU/HAL/lcd/: lcd.c  lcd.h
HMI_ECU/HAL/led/: led.c
HMI_ECU/HAL/pot/: pot.c  pot.h
HMI_ECU/MCAL/adc/: adc.c  adc.h
HMI_ECU/MCAL/gpio/: gpio.c  gpio.h
HMI_ECU/MCAL/led/: led.c  led.h
HMI_ECU/MCAL/timers/: systick.c  (+1 more)
(+4 files in other folders)
